# rust-fprint

./: .travis.yml  Cargo.toml  LICENSE  README.md
.dependabot/: config.yml
.github/: dependabot.yml
examples/: enroll.rs  img_capture.rs  verify.rs  verify_live.rs
examples/spacs/: Cargo.toml  README.md  db.sql
examples/spacs/src/: common.rs  identifier.rs  saver.rs
fprint-rs/: Cargo.toml
fprint-rs/src/: device.rs  discovered_device.rs  driver.rs  errors.rs  finger.rs  lib.rs  print_data.rs
fprint-sys/: Cargo.toml  build.rs
fprint-sys/src/: device.rs  discovered_device.rs  driver.rs  errors.rs  finger.rs  lib.rs  print_data.rs
