[package]
name = "fprint-rs"
version = "0.1.0"
authors = ["funkill <funkill2@gmail.com>"]
edition = "2018"
description = "fprint bindings"
repository = "https://github.com/funkill/rust-fprint"
categories = ["api-bindings"]
keywords = ["fprint", "libfprint"]
license = "MIT"

[dependencies]
"fprint-sys" = { version = "0.1", path = "../fprint-sys/" }
failure = "0.1"
libc = "0.2"

[[example]]
name = "enroll"
path = "../examples/enroll.rs"

[[example]]
name = "img_capture"
path = "../examples/img_capture.rs"

[[example]]
name = "verify"
path = "../examples/verify.rs"

[[example]]
name = "verify_live"
path = "../examples/verify_live.rs"

[package.metadata.docs.rs]
dependencies = [ "libfprint-dev" ]
