[package]
name = "fprint-sys"
version = "0.1.2"
authors = ["funkill <funkill2@gmail.com>"]
edition = "2018"
links = "fprint"
description = "FFI bindings to fprint"
repository = "https://github.com/funkill/rust-fprint"
categories = ["external-ffi-bindings"]
license = "MIT"
build = "build/build.rs"

[package.metadata.pkg-config]
libfprint = "*"

[dependencies]

[build-dependencies]
bindgen = "0.47"
pkg-config = "0.3"

[package.metadata.docs.rs]
dependencies = [ "libfprint-dev" ]
